<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:id="@+id/tech">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewSize,UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/calculate_run_balance"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/calculate_run_balance_summary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/calculate_run_balance_tech"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/plum_bleep_test"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/plum_bleep_test_summary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/plum_bleep_test_tech"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/legend_bleep_test"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/legend_bleep_test_summary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/legend_bleep_test_tech"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        </LinearLayout>
    </ScrollView>
</TableLayout>