<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clickable="false">

    <android.widget.LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                style="@style/AppTheme.Base"
                android:id="@+id/toolbar"/>
        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/calculate_run_balance"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/calculate_run_balance"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/plum_bleep_test"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/plum_bleep_test"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/legend_bleep_test"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/legend_bleep_test"/>
            </LinearLayout>
        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/copyright"
            android:textColor="@color/colorPrimaryDark"
            android:paddingBottom="@dimen/copyright_bottom"
            android:gravity="center|bottom"/>
    </android.widget.LinearLayout>
</android.support.v4.widget.DrawerLayout>
